# Intruverse

./: CMakeLists.txt  README.md  build_cmake.sh  calculateChecksum.cpp  client.cpp  server.cpp
input/: testfile
src/: calculateChecksum.cpp  calculateChecksum.h  client.cpp  encrypt_decrypt.cpp  server.cpp
src/client/: client.cpp
src/server/: main.cpp
src/shared/: calculateChecksum.h  encrypt_decrypt.h
